--- a/config/telegram.yaml
+++ b/config/telegram.yaml
@@ -4,9 +4,9 @@
 # [en_US] Start a Telegram conversation with @botfather and type /newbot to get your_telegram_bot_token.
 # [pt_BR] Inicie uma conversa no Telegram com @botfather e digite /newbot para pegar o your_telegram_bot_token.
 
-telegram_enable: true
-telegram_chat_id: ["751981725", "YOUR_CHAT_ID2(optional)"]
-telegram_bot_token: "1456282021:AAEmKaSAT3YC0z8BxauYlmltluHTyY_BW8w"
+telegram_enable: false
+telegram_chat_id: ["YOUR_CHAT_ID", "YOUR_CHAT_ID2(optional)"]
+telegram_bot_token: "YOUR_BOT_TOKEN"
 enable_coin_report: false
 enable_map_report: false
 format_of_images: "jpg"
